refactoring file locations + small bugfixes

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,10 @@ plotly # ==5.13.0
 scikit-learn # ==1.2.1
 scipy # ==1.10.0
 tqdm # ==4.64.1
+psutil
 nbformat
 kaleido
 ffmpeg-python
+streamlit # ==1.1.0
+orjson  # ==3.6.3
+watchdog
